--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "async": "^0.9.0",
     "buffer-reader": "0.0.2",
-    "pngjs-image": "^0.9.3"
+    "pngjs-image": "^0.9.3",
+    "progress": "^1.1.8"
   }
 }
